1998-07-01  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Archiver.m ([Archiver -_collectRemaining_:]): New method.
	([Archiver -processMakeExpr:]): Call it.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LIBRARIES, libsimtools_a_SOURCES): Remove.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libsimtools_la_SOURCES,
	libsimtools_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New
	variables.  Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* simtools.h: Update documentation tags.

1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* NSelect.m: Include collections.h.

1998-04-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Archiver.m (defaultFileName): Use catC: instead of appendC:

	* UName.m ([UName -getNewNameObject]), ([UName -getNewName]): Likewise.

1998-04-16  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* QSort.m: Include misc.h.
	
	* InFile.m: Include collections.h, not collections/String.h.

	* UName.m: Don't include collections/String.h.  stdlib.h, or
	string.h.  Include collections.h and misc.h.

	* NSelect.h, ObjectLoader.m, ObjectSaver.[hm], QSort.[hm]:
	Reformatting throughout.
	
	* AppendFile.[hm]: Minor reformatting.

	* simtools.h:  Move tagged documentation to the respective protocols
	definition.
	
	* ActiveOutFile.m, AppendFile.m, InFile.m, NSelect.m,
	ObjectLoader.m, ObjectSaver.m, OutFile.m, UName.m: Remove tagged
	documentation.  (Move it to simtools.h.)

1998-04-15  Irene Lee  <lee@wijiji.santafe.edu>

	* ActiveOutFile.m, AppendFile.m, InFile.m, NSelect.m, ObjectLoader.m,
	ObjectSaver.m, OutFile.m, QSort.m, UName.m, simtools.m:
	Add comment tags with documentation.

1998-04-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.h: Declare new function initSwarmArguments.
