@@ -10,12 +10,12 @@ INCLUDES = -I$(srcdir)/../collections -I$(srcdir)/../defobj -I$(srcdir)/../activ
 
 lib_LTLIBRARIES = libsimtools.la
 
-SRC = ActiveOutFile.m AppendFile.m Archiver.m InFile.m \
+SRC = AppendFile.m Archiver.m InFile.m \
 	NSelect.m ObjectLoader.m ObjectSaver.m OutFile.m QSort.m \
 	UName.m simtools.m
 
 libsimtools_la_SOURCES = $(SRC)
 libsimtools_la_LDFLAGS = -version-info $(CURRENT):$(REVISION):$(AGE)
 
-simtools_HEADERS = ActiveOutFile.h AppendFile.h Archiver.h InFile.h NSelect.h \
+simtools_HEADERS = AppendFile.h Archiver.h InFile.h NSelect.h \
 	ObjectLoader.h ObjectSaver.h OutFile.h QSort.h UName.h
