@@ -318,25 +318,6 @@ USING
 + (void)select: (int)n from: aCollection into: bCollection;
 @end
 
-@protocol ActiveOutFile <MessageProbe>
-//S: An object that actively updates its file stream when updated.
-
-//D: This is the file I/O equivalent of ActiveGraph: it takes an OutFile 
-//D: object, a target (datafeed) object, and a selector, which it uses to
-//D: extract data from the object and send it to the file. 
-USING
-//M: The setFileObject: method sets the file object to which the data will be
-//M: sent.
-- setFileObject: aFileObj;
-
-//M: The setDataFeed: method sets the object that will be probed for data.
-- setDataFeed: d;
-
-//M: The step method fires the probe, reads the value from the object, and 
-//M: sends the value to the file.
-- step;
-@end
-
 
 //F: Initializes the Swarm libraries. This call should be in any Swarm code
 //F: you write.
