@@ -1,3 +1,11 @@
+1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Makefile.am (SRC, simtools_HEADERS): Remove mention ActiveOutFile.
+
+	* simtools.h (ActiveOutFile): Remove.
+
+	* ActiveOutFile.[hm]: Remove.
+
 1998-07-01  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* Archiver.m ([Archiver -_collectRemaining_:]): New method.
